# WindowsClient

./: .gitignore  CMakeLists.txt  ClipboardContent.cpp  ClipboardContent.h  ClipboardManager.cpp  ClipboardManager.h  NetworkConnection.cpp  NetworkConnection.h  main.cpp
Qt/: CMakeLists.txt  main.cpp  startup.cpp  startup.h  startup.ui
